# hytranslate

./: .gitignore  .mcp.json  .prettierignore  AGENTS.md  CLAUDE.local.md  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.claude/agents/: library-docs-fetcher.md  quality-gate.md
.claude/commands/: commit.md  pr.md
.claude/hooks/: notify.sh  stop-notify.sh
.claude/rules/: accessibility.md  api-handling.md  architecture.md  code-style.md  documentation.md  error-handling.md  rust-style.md  security.md  shell-handling.md  styling.md  tauri-ipc.md  testing.md
.claude/skills/git-commit-push-pr/: SKILL.md
.claude/skills/git-commit-push-pr/checklists/: pre-commit.md  pre-pr.md  pre-push.md
.claude/skills/git-commit-push-pr/references/: branch-and-remote.md  commit-conventions.md  pr-creation.md
.claude/skills/git-commit-push-pr/templates/: commit-plan.md  pr-body.md
.claude/skills/github-release/: SKILL.md
.claude/skills/github-release/checklists/: accuracy-gate.md  post-publish.md  pre-publish.md
.claude/skills/github-release/references/: accuracy-gate.md  gh-publishing.md  release-note-format.md  versioning.md
.claude/skills/github-release/templates/: release-checklist.md  release-note.md
.claude/skills/tauri-code-review/: SKILL.md
.claude/skills/tauri-code-review/checklists/: p0-critical.md  p1-potential.md  p2-improvement.md
.claude/skills/tauri-code-review/references/: capabilities-scopes.md  ipc-command-security.md  rust-code-quality.md  type-contracts-and-platform.md  webview-csp-security.md
.claude/skills/tauri-code-review/templates/: context-gathering.md  review-result.md
design/icons/: build-icons.mjs  preview.html
docs/: code-review-v1.md  hytranslate-mac-prd.md  phase1-core-translation-code-review.md  phase2-language-settings-code-review.md
docs/plans/: 00-initial-setup.md  01-phase1-core-translation.md  02-phase2-language-detection-settings.md  03-phase3-macos-integration.md  04-phase4-history-search.md  05-phase5-onboarding-model-lifecycle.md  06-code-review-v1-followup.md  07-bugfix-main-window-dock-reopen.md  08-popup-active-screen-fullscreen-overlay.md  09-bugfix-popup-mixed-dpi-active-monitor-placement.md
docs/releases/: release-guideline.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.2.1.md
evals/: translation-quality.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: clipboard-read.json  default.json  popup-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  events.rs  lib.rs  main.rs  paths.rs
src-tauri/src/commands/: detect.rs  history.rs  mod.rs  onboarding.rs  paths.rs  popup.rs  settings.rs  system.rs  translate.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 0001_init.sql
src-tauri/src/environment/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/language/: detector.rs  mod.rs
src-tauri/src/menubar/: mod.rs  positioning.rs
src-tauri/src/ollama/: client.rs  endpoint.rs  mod.rs  models.rs  prompt.rs
src-tauri/src/settings/: mod.rs  store.rs
src-tauri/src/shortcuts/: mod.rs  parser.rs
src/components/: README.md
src/features/: README.md
src/features/clipboard/: hooks.test.tsx  hooks.ts  ipc.test.ts  ipc.ts  types.ts
src/features/history/: ipc.ts  recent.test.ts  store.test.ts  store.ts  types.ts
src/features/history/components/: history-panel.tsx
src/features/onboarding/: ipc.ts  store.test.ts  store.ts  types.ts
src/features/onboarding/components/: onboarding-screen.tsx
src/features/paths/: ipc.ts  types.ts
src/features/popup/: ipc.test.ts  ipc.ts
src/features/settings/: ipc.test.ts  ipc.ts  store.test.ts  store.ts  types.ts
src/features/settings/components/: legacy-migration-banner.test.tsx  settings-panel.tsx
src/features/translation/: ipc.test.ts  ipc.ts  store.test.ts  store.ts  types.ts  use-translation-controller.test.tsx  use-translation-controller.ts
src/features/translation/components/: inline-error.tsx  source-language-select.test.tsx  source-language-select.tsx  translation-panel.tsx
src/i18n/: ko.ts
src/lib/: backoff.test.ts  backoff.ts  clipboard.ts  theme.ts
src/lib/hooks/: README.md  use-auto-copy-translation.test.tsx  use-auto-copy-translation.ts
src/lib/ipc/: client.ts  errors.test.ts  errors.ts  events.ts
src/styles/: globals.css
src/types/: README.md
src/windows/main/: index.html  main.tsx
src/windows/menubar/: index.html  menubar.tsx
src/windows/popup/: index.html  popup.tsx  resize.test.ts  resize.ts
tests/e2e/: clipboard-translate.spec.ts  history-search-favorite.spec.ts  onboarding-happy-path.spec.ts  sanity.spec.ts  translate-main.spec.ts  translate-popup-shortcut.spec.ts
tests/unit/: sanity.test.ts
