[package]
name = "hytranslate"
version = "0.1.0"
edition = "2021"
description = "HyTranslate Mac — local translation via Ollama"
authors = ["shiron"]
license = "UNLICENSED"
publish = false

[lib]
name = "hytranslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
csv = "1"

# popup 을 다른 앱의 네이티브 전체화면 Space 위에 띄우기 위한 NSWindow 직접 제어.
# tao 의 set_visible_on_all_workspaces 는 FullScreenAuxiliary 를 켜지 않아(Tauri #11488)
# objc2 로 collection behavior / window level 을 직접 설정한다. 두 crate 모두 tao/wry
# 경유로 이미 트리에 있어 빌드 비용 증가는 없다.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWindow", "NSResponder"] }
# NSPoint(= CGPoint) 만 쓴다. objc2-app-kit 이 이미 같은 feature 를 켜므로 신규 lock 패키지 0개.
objc2-foundation = { version = "0.3", default-features = false, features = ["NSGeometry", "objc2-core-foundation"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
